--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,11 @@
 {
   "extends": "eslint:recommended",
-  "parser": "eslint",
+  "parser": "babel-eslint",
   "parserOptions": {
-    "ecmaVersion": 5
+    "ecmaVersion": 6,
+    "ecmaFeatures": {
+      "modules": true
+    }
   },
   "rules": {
     "strict": 0,
@@ -13,6 +16,7 @@
   },
   "env": {
     "browser": true,
+    "es6": true,
     "commonjs": true
   }
 }
