--- a/package.json
+++ b/package.json
@@ -2,13 +2,42 @@
   "name": "swsloading",
   "version": "1.0.0",
   "description": "SVG loading animation with Mithril.js",
-  "main": "",
-  "private": true,
+  "main": "index.js",
+  "config": {
+    "js_src": "src/index.js",
+    "js_out": "lib/swsloading.js"
+  },
   "scripts": {
+    "build": "NODE_ENV=production browserify ${npm_package_config_js_src} -r ./src/swsloading.js:swsloading -t | uglifyjs -m -c --comments > ${npm_package_config_js_out}",
+    "watch": "NODE_ENV=development watchify -r ./src/swsloading.js:swsloading --debug ${npm_package_config_js_src} -o ${npm_package_config_js_out} -v",
+    "server": "browser-sync start --server ./ --startPath example/ --files 'src/**/*' --no-open",
+    "start": "npm run server & npm run watch",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/inotom/swsloading.git"
+  },
+  "browserify": {
+    "transform": [
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015"
+          ]
+        }
+      ]
+    ]
   },
   "author": "iNo <wdf7322@yahoo.co.jp>",
   "license": "MIT",
   "dependencies": {
+    "mithril": "^0.2.5"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.22.0",
+    "babelify": "^7.3.0",
     "mithril": "^0.2.5"
   }
 }
