--- a/.eslintrc
+++ b/.eslintrc
@@ -1,22 +1,17 @@
 {
   "extends": "eslint:recommended",
-  "parser": "babel-eslint",
   "parserOptions": {
-    "ecmaVersion": 6,
-    "ecmaFeatures": {
-      "modules": true
-    }
+    "ecmaVersion": 5
   },
   "rules": {
     "strict": 0,
     "semi": 2,
     "eqeqeq": 2,
-    "no-var": 2,
+    "no-var": 0,
     "no-console": 0
   },
   "env": {
     "browser": true,
-    "es6": true,
     "commonjs": true
   }
 }
