--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "swsloading",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "SVG loading animation with Mithril.js",
-  "main": "index.js",
+  "main": "src/index.js",
   "config": {
     "js_src": "src/index.js",
     "js_out": "lib/swsloading.js"
@@ -18,26 +18,13 @@
     "type": "git",
     "url": "https://github.com/inotom/swsloading.git"
   },
-  "browserify": {
-    "transform": [
-      [
-        "babelify",
-        {
-          "presets": [
-            "es2015"
-          ]
-        }
-      ]
-    ]
-  },
+  "browserify": {},
   "author": "iNo <wdf7322@yahoo.co.jp>",
   "license": "MIT",
   "dependencies": {
-    "mithril": "^1.0.0"
+    "mithril": "^1.0.1"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.22.0",
-    "babelify": "^7.3.0",
     "mithril": "^1.0.1"
   }
 }
